# fitsview-hartmann

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  README
ebuild/: Manifest  Readme
src/: CMakeLists.txt  CUDA.cu  Makefile  NOCUDA.c  cmake_install.cmake  contours.c  filelist.c  fits.c  fitsheaders.c  fitsview  fitsview.c  fitsview.glade  fitsview.ui  gauss.c  gtk.c  imtools.c  open_dialog.c  opengl.c  spots.c  terrain.c  tracking.c  ui.h
src/include/: CUtools.h  contours.h  filelist.h  fits.h  fitsheaders.h  fitsview.h  gauss.h  gtk.h  imtools.h  open_dialog.h  opengl.h  spots.h  terrain.h  tracking.h
src/locale/ru/: messages.po  ru.po  update
src/locale/ru/LC_MESSAGES/: fitsview.mo
src/scripts/: genh
